--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-js": "^5.37.0",
     "@clerk/nextjs": "^6.6.0",
     "@neondatabase/serverless": "^0.10.4",
+    "encoding": "^0.1.13",
+    "firebase": "^11.0.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
